<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    impo


    <EditText
        android:id="@+id/costOfService"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/entradaGorgeta"
        android:inputType="numberDecimal"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        tools:text="@string/entradaGorgeta" />

    <TextView
        android:id="@+id/serviceQuestion"
        android:layout_width="222dp"
        android:layout_height="25dp"
        android:text="@string/avaliarServico"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/costOfService"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/avaliarServico" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="168dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serviceQuestion"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/optionTwentyPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incrivel1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/optionEighteenPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bom2"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/optionFifteenPercent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok3"
            android:textSize="16sp" />
    </RadioGroup>

    <Switch
        android:id="@+id/roundUpSwitch"
        android:layout_width="347dp"
        android:layout_height="54dp"
        android:text="@string/pontaArredondada"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipOptions"
        app:layout_constraintVertical_bias="0.063" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="350dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:text="@string/botaoCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roundUpSwitch"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalcularGor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        app:layout_constraintVertical_bias="0.054" />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="239dp"
        android:layout_height="53dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateButton"
        app:layout_constraintVertical_bias="0.28" />


</androidx.constraintlayout.widget.ConstraintLayout>